시뮬레이션 추가

--- a/index.html
+++ b/index.html
@@ -712,19 +712,19 @@
                         <div class="row">
                           <div class="col-md-3">
                             <!-- simulation-btn-60-2time btn btn-info -->
-                            <button class="" style="width:100%;margin-bottom:10px;">60% 사회적 거리두기 2회 시뮬레이션(준비중)</button>
+                            <button class="btn btn-info" style="width:100%;margin-bottom:10px;">60% 사회적 거리두기 2회 시뮬레이션(준비중)</button>
                           </div>
                           <div class="col-md-3">
                             <!-- simulation-btn-80-2time btn btn-info -->
-                            <button class="" style="width:100%;margin-bottom:10px;">80% 사회적 거리두기 2회 시뮬레이션(준비중)</button>
+                            <button class="btn btn-info" style="width:100%;margin-bottom:10px;">80% 사회적 거리두기 2회 시뮬레이션(준비중)</button>
                           </div>
                           <div class="col-md-3">
                             <!-- simulation-btn-60-3time btn btn-info -->
-                            <button class="" style="width:100%;margin-bottom:10px;">60% 사회적 거리두기 3회 시뮬레이션(준비중)</button>
+                            <button class="btn btn-info" style="width:100%;margin-bottom:10px;">60% 사회적 거리두기 3회 시뮬레이션(준비중)</button>
                           </div>
                           <div class="col-md-3">
                             <!-- simulation-btn-80-3time btn btn-info -->
-                            <button class="" style="width:100%;margin-bottom:10px;">80% 사회적 거리두기 3회 시뮬레이션(준비중)</button>
+                            <button class="btn btn-info" style="width:100%;margin-bottom:10px;">80% 사회적 거리두기 3회 시뮬레이션(준비중)</button>
                           </div>
                         </div>
 
