--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
                           </div>
                           <div class="col-md-3">
                             <!-- simulation-btn-80-2time btn btn-info -->
-                            <button class="btn btn-info" style="width:100%;margin-bottom:10px;">80% 사회적 거리두기 2회 시뮬레이션(준비중)</button>
+                            <button class="btn btn-info simulation-btn-80-2time" style="width:100%;margin-bottom:10px;">80% 사회적 거리두기 2회 시뮬레이션(준비중)</button>
                           </div>
                           <div class="col-md-3">
                             <!-- simulation-btn-60-3time btn btn-info -->
@@ -724,7 +724,7 @@
                           </div>
                           <div class="col-md-3">
                             <!-- simulation-btn-80-3time btn btn-info -->
-                            <button class="btn btn-info" style="width:100%;margin-bottom:10px;">80% 사회적 거리두기 3회 시뮬레이션(준비중)</button>
+                            <button class="btn btn-info simulation-btn-80-3time" style="width:100%;margin-bottom:10px;">80% 사회적 거리두기 3회 시뮬레이션(준비중)</button>
                           </div>
                         </div>
 
@@ -2206,6 +2206,7 @@
   <script src="simulator/50per_stop_script.js"></script>
   <script src="simulator/80per_stop_script.js"></script>
   <script src="simulator/80per_stop_script_2times.js"></script>
+  <script src="simulator/80per_stop_script_3times.js"></script>
 
 
   <!-- 존스홉킨스 전세계 누적데이터 -->
