시뮬레이션 추가

--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
                     <!-- Card Body -->
                     <div class="card-body">
 
-                      <div class="covid-simulator">
+                      <div class="covid-simulator" style="width:100%">
                         <ul class="covid-status">
                           <li class="recovered">
                             <div class="label">완치 <span class="count">0</span></div>
@@ -712,19 +712,19 @@
                         <div class="row">
                           <div class="col-md-3">
                             <!-- simulation-btn-60-2time btn btn-info -->
-                            <button class="btn btn-info" style="width:100%;margin-bottom:10px;">60% 사회적 거리두기 2회 시뮬레이션(준비중)</button>
+                            <button class="btn btn-info simulation-btn-60-2time" style="width:100%;margin-bottom:10px;">60% 사회적 거리두기 2회 시뮬레이션</button>
                           </div>
                           <div class="col-md-3">
                             <!-- simulation-btn-80-2time btn btn-info -->
-                            <button class="btn btn-info simulation-btn-80-2time" style="width:100%;margin-bottom:10px;">80% 사회적 거리두기 2회 시뮬레이션(준비중)</button>
+                            <button class="btn btn-info simulation-btn-80-2time" style="width:100%;margin-bottom:10px;">80% 사회적 거리두기 2회 시뮬레이션</button>
                           </div>
                           <div class="col-md-3">
                             <!-- simulation-btn-60-3time btn btn-info -->
-                            <button class="btn btn-info" style="width:100%;margin-bottom:10px;">60% 사회적 거리두기 3회 시뮬레이션(준비중)</button>
+                            <button class="btn btn-info simulation-btn-60-3time" style="width:100%;margin-bottom:10px;">60% 사회적 거리두기 3회 시뮬레이션</button>
                           </div>
                           <div class="col-md-3">
                             <!-- simulation-btn-80-3time btn btn-info -->
-                            <button class="btn btn-info simulation-btn-80-3time" style="width:100%;margin-bottom:10px;">80% 사회적 거리두기 3회 시뮬레이션(준비중)</button>
+                            <button class="btn btn-info simulation-btn-80-3time" style="width:100%;margin-bottom:10px;">80% 사회적 거리두기 3회 시뮬레이션</button>
                           </div>
                         </div>
 
@@ -2207,6 +2207,8 @@
   <script src="simulator/80per_stop_script.js"></script>
   <script src="simulator/80per_stop_script_2times.js"></script>
   <script src="simulator/80per_stop_script_3times.js"></script>
+  <script src="simulator/60per_stop_script_2times.js"></script>
+  <script src="simulator/60per_stop_script_3times.js"></script>
 
 
   <!-- 존스홉킨스 전세계 누적데이터 -->
