--- a/index.html
+++ b/index.html
@@ -312,6 +312,43 @@
               </div>
             </div>
             <!-- //국내 확진자 누적 현황 -->
+
+          </div>
+
+          <div class="row">
+
+            <!-- 한국 연령대별 확진자 분석 -->
+            <div class="col-xl-6 col-lg-12">
+              <div class="card shadow mb-4">
+                <!-- Card Header - Dropdown -->
+                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                  <h6 class="m-0 font-weight-bold text-danger">한국 연령대별 확진자 분석</h6>
+                  <div class="right"><a class="new_window" href="#" target="_blank" alt="상세보기"><i class="fas fa-external-link-alt"></i></a></div>
+                </div>
+                <!-- Card Body -->
+                <div class="card-body tab-content">
+                    <canvas id="koreaDeathsPerPieChart"></canvas>
+                </div>
+              </div>
+            </div>
+            <!-- //한국 연령대별 확진자 분석 -->
+
+            <!-- 한국 치명율 분석-->
+            <div class="col-xl-6 col-lg-12">
+              <div class="card shadow mb-4">
+                <!-- Card Header - Dropdown -->
+                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                  <h6 class="m-0 font-weight-bold text-danger">한국 치명율 분석</h6>
+                  <div class="right"><a class="new_window" href="#" target="_blank" alt="상세보기"><i class="fas fa-external-link-alt"></i></a></div>
+                </div>
+                <!-- Card Body -->
+                <div class="card-body tab-content">
+                    <canvas id="koreaDeathsPerPieChart_two"></canvas>
+                </div>
+              </div>
+            </div>
+            <!-- //한국 치명율 분석 -->
+
           </div>
 
           <div class="anchor" id="worldCasesStatus"></div>
@@ -523,6 +560,8 @@
             <!-- //Top15 발생국가 -->
 
           </div>
+
+
 
           <div class="anchor" id="safetyRule"></div>
 
@@ -1993,6 +2032,7 @@
   <script src="data/koreaTotalCumulativeData.js"></script>
   <script src="data/worldCumulativeData.js"></script>
   <script src="totalDataSet.js"></script>
+  <script src="data/koreaAgeDeathsPerData.js"></script>
 
   <script>
     var data = marker;
@@ -2090,9 +2130,11 @@
   <script src="vendor/chart.js/Chart.min.js"></script>
 
   <!-- 차트를 그리고 싶으시면 아래 파일을 참고해주세요. -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
   <script src="js/chart/chart-area.js"></script>
   <script src="js/chart/top15Countries.js"></script>
   <script src="js/chart/chart-bar.js"></script>
+  <script src="js/chart/chart-pie.js"></script>
 
   <!-- Page level plugins -->
   <script src="vendor/datatables/jquery.dataTables.min.js"></script>
