--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
               <div class="card shadow mb-4">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                  <h6 class="m-0 font-weight-bold text-danger">한국 치명율 분석</h6>
+                  <h6 class="m-0 font-weight-bold text-danger">한국 연령대별 치명율 분석(사망자/확진자)</h6>
                   <div class="right"><a class="new_window" href="#" target="_blank" alt="상세보기"><i class="fas fa-external-link-alt"></i></a></div>
                 </div>
                 <!-- Card Body -->
