--- a/index.html
+++ b/index.html
@@ -936,6 +936,20 @@
 
                         <a class="btn btn-primary" target="_blank" style="margin-bottom:1rem; width:100%;" href="https://gis.jeju.go.kr/crn/index.do" role="button">제주도청 제공 확진자 이동동선 및 안심존</a>
 
+                        <!-- 확진자 News 10 -->
+                        <div class="card">
+                          <div class="card-header" id="headingFour">
+                            <h2 class="mb-0 cases-title">
+                              <a target="_blank" href="https://www.jeju.go.kr/files/convert/202004/a01a6905-7c05-40e4-9dfa-c5695c65ead9.hwp.htm">
+                                <button class="btn btn-link" type="button">
+                                  열번째 확진자
+                                </button>
+                              </a>
+                            </h2>
+                          </div>
+                        </div>
+                        <!-- //확진자 News 10 -->
+
                         <!-- 확진자 News 9 -->
                         <div class="card">
                           <div class="card-header" id="headingFour">
