--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                   <div class="right"><a class="new_window" href="#" target="_blank" alt="상세보기"><i class="fas fa-external-link-alt"></i></a></div>
                 </div>
                 <!-- Card Body -->
-                <div class="card-body tab-content">
+                <div class="card-body tab-content" style="height:35rem;">
                     <canvas id="koreaDeathsPerPieChart"></canvas>
                 </div>
               </div>
@@ -342,7 +342,7 @@
                   <div class="right"><a class="new_window" href="#" target="_blank" alt="상세보기"><i class="fas fa-external-link-alt"></i></a></div>
                 </div>
                 <!-- Card Body -->
-                <div class="card-body tab-content">
+                <div class="card-body tab-content" style="height:35rem;">
                     <canvas id="koreaDeathsPerPieChart_two"></canvas>
                 </div>
               </div>
