--- a/index.html
+++ b/index.html
@@ -936,6 +936,34 @@
 
                         <a class="btn btn-primary" target="_blank" style="margin-bottom:1rem; width:100%;" href="https://gis.jeju.go.kr/crn/index.do" role="button">제주도청 제공 확진자 이동동선 및 안심존</a>
 
+                        <!-- 확진자 News 12 -->
+                        <div class="card">
+                          <div class="card-header" id="headingFour">
+                            <h2 class="mb-0 cases-title">
+                              <a target="_blank" href="https://www.jeju.go.kr/files/convert/202004/cba329a3-2498-437c-b7f9-aad39ba7f4a7.hwp.htm">
+                                <button class="btn btn-link" type="button">
+                                  열두번째 확진자
+                                </button>
+                              </a>
+                            </h2>
+                          </div>
+                        </div>
+                        <!-- //확진자 News 12 -->
+
+                        <!-- 확진자 News 11 -->
+                        <div class="card">
+                          <div class="card-header" id="headingFour">
+                            <h2 class="mb-0 cases-title">
+                              <a target="_blank" href="https://www.jeju.go.kr/files/convert/202004/f1ad77b0-3d4f-4769-a3f5-941b282766cc.hwp.htm">
+                                <button class="btn btn-link" type="button">
+                                  열한번째 확진자
+                                </button>
+                              </a>
+                            </h2>
+                          </div>
+                        </div>
+                        <!-- //확진자 News 11 -->
+
                         <!-- 확진자 News 10 -->
                         <div class="card">
                           <div class="card-header" id="headingFour">
