--- a/index.html
+++ b/index.html
@@ -708,6 +708,9 @@
                     </div>
                     <!-- Card Body -->
                     <div class="card-body">
+                      <ul>
+                        <li><a href="https://developers.google.com/maps/covid19?fbclid=IwAR2-obpDsjGASSaGXEeCVrMfbTRN4a_PvaQOfZKoFPvRwpL2ajPyzrk8Co4">시나리오 관련 워싱턴포스트 뉴스기사</a></li>
+                      </ul>
 
                       <div class="covid-simulator" style="width:100%">
                         <ul class="covid-status">
@@ -2296,7 +2299,7 @@
 
 
   <!-- 존스홉킨스 전세계 누적데이터 -->
-  <script src="data/HopkinsCoronaWorldData.js"></script>
+  <!-- <script src="data/HopkinsCoronaWorldData.js"></script> -->
   <script src="js/chart/top15Countries_graph.js"></script>
 </body>
 
