워싱턴 포스트 기사 링크 수정

--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
                     <!-- Card Body -->
                     <div class="card-body">
                       <ul>
-                        <li><a href="https://developers.google.com/maps/covid19?fbclid=IwAR2-obpDsjGASSaGXEeCVrMfbTRN4a_PvaQOfZKoFPvRwpL2ajPyzrk8Co4">시나리오 관련 워싱턴포스트 뉴스기사</a></li>
+                        <li><a href="https://www.washingtonpost.com/graphics/2020/world/corona-simulator/?itid=sf_coronavirus">시나리오 관련 워싱턴포스트 뉴스기사</a></li>
                       </ul>
 
                       <div class="covid-simulator" style="width:100%">
