--- a/index.html
+++ b/index.html
@@ -329,6 +329,7 @@
                 <div class="card-body tab-content" style="height:35rem;">
                     <canvas id="koreaDeathsPerPieChart"></canvas>
                 </div>
+                <p> 질병관리본부 데이터로 일일 업데이트 됩니다. </p>
               </div>
             </div>
             <!-- //한국 연령대별 확진자 분석 -->
@@ -345,6 +346,7 @@
                 <div class="card-body tab-content" style="height:35rem;">
                     <canvas id="koreaDeathsPerPieChart_two"></canvas>
                 </div>
+                <p> 질병관리본부 데이터로 일일 업데이트 됩니다. </p>
               </div>
             </div>
             <!-- //한국 치명율 분석 -->
