3,4기 팀 추가 및 지원사업 추가

--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
             <a class="collapse-item" href="https://news.naver.com/main/factcheck/main.nhn" target="_blank">팩트체크</a>
             <a class="collapse-item" href="https://www.notion.so/paullab/73a19000672149559cd949c018a202f8" target="_blank">소상공인 지원사업</a>
             <a class="collapse-item" href="https://neighbor-house.tistory.com/148" target="_blank">아이돌봄 지원사업</a>
+            <a class="collapse-item" href="http://www.nps.or.kr/jsppage/app/cms/view.jsp?seq=23796&cPage=2&cmsId=news&SK=&SW=" target="_blank">입원·격리자 지원사업</a>
           </div>
         </div>
       </li>
