--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
                     <!-- Card Body -->
                     <div class="card-body">
                       <div class="table-responsive">
-                        <p class="text-right mb-1">※ 20년 2월 10일 기준</p>
+                        <p class="text-right mb-1">※ 20년 4월 12일 기준</p>
                         <table class="table table-bordered table-sm text-center" cellspacing="0">
                           <colgroup>
                             <col style="width:160px" />
@@ -649,11 +649,11 @@
                               <th>감염매개체</th>
                               <td>사람</td>
                               <td>낙타</td>
-                              <td colspan="2">박쥐</td>
+                              <td colspan="2">박쥐(추정)</td>
                             </tr>
                             <tr>
                               <th>전파방식</th>
-                              <td colspan="4">비말감염</td>
+                              <td colspan="4">비말감염*</td>
                             </tr>
                             <tr>
                               <th>주요증상</th>
@@ -664,28 +664,28 @@
                               <td>약 0.07%</td>
                               <td>약 35%</td>
                               <td>약 10%</td>
-                              <td>약 2%</td>
+                              <td>세계 6.1%,<br>대한민국2.0%</td>
                             </tr>
                             <tr>
-                              <th>기초감염재생산수</th>
+                              <th>기초감염재생산수(R0값)*</th>
                               <td>1.1~1.7</td>
                               <td>0.4~0.9</td>
                               <td>2~5</td>
-                              <td>1.4~2.5</td>
+                              <td>5~5.7</td>
                             </tr>
                             <tr>
                               <th>감염·사망자</th>
                               <td>집계되지 않음(18,449)</td>
                               <td>2,482(854)</td>
                               <td>8,096(774)</td>
-                              <td>45,188(1,115)</td>
+                              <td>1,783,941(109,312)</td>
                             </tr>
                           </tbody>
                         </table>
                       </div>
                       <p>
-                        기초감염재생산수: 한 사람의 감염자가 몇 명을 전염시킬 수 있는지를 나타낸 값<br>
-                        비말감염: 감염자의 침, 콧물 등 체액이 다른 사람의 입이나 코로 들어가 감염이 이루지는 것<br>
+                        *기초감염재생산수(R0값): 한 사람의 감염자가 몇 명을 전염시킬 수 있는지를 나타낸 값<br>
+                        *비말감염: 감염자의 침, 콧물 등 체액이 다른 사람의 입이나 코로 들어가 감염이 이루지는 것<br>
                       </p>
                       <div class="source"><span class="title">출처</span><span class="desc">질병관리본부, 세계보건기구(WHO). 우측 하단 링크 참고.</span></div>
                     </div>
@@ -855,7 +855,7 @@
                   <div class="card shadow mb-4">
                     <!-- Card Header - Dropdown -->
                     <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                      <h6 class="m-0 font-weight-bold text-danger">마스크 5부제</h6>
+                      <h6 class="m-0 font-weight-bold text-danger">마스크 5부제(1인당2매/1주)</h6>
                       <div class="right"><a class="new_window" href="http://www.moef.go.kr/com/synap/synapView.do?atchFileId=ATCH_000000000013410&fileSn=1" target="_blank" alt="상세보기"><i class="fas fa-external-link-alt"></i></a></div>
                     </div>
                     <div class="card-body">
@@ -900,6 +900,7 @@
                           </tbody>
                         </table>
                       </div>
+                      <p> *4월 15일(수) 선거당일은 출생연도 관계없이 구매 가능(주1회,1인2매 중복구매 제한 유지)</p>
                       <h5 style="font-weight: 600;">마스크 직접 구매</h5>
                       <ul>
                         <li>운전면허증, 주민등록증, 여권 등의 신분증을 지참</li>
@@ -907,9 +908,10 @@
                       <!-- <p>운전면허증, 주민등록증, 여권 등의 신분증을 지참</p> -->
                       <h5 style="font-weight: 600;">마스크 대리 구매</h5>
                       <ul>
-                        <li>주민등록등본상 동거인이 5부제 해당 요일에 대리 구매 가능</li>
-                        <li>본인 신분증과 대상자가 병기된 주민등록등본 지참</li>
-                        <li><b>대상</b> : 2010년 이후 출생한 어린이, 1940년 이전 출생한 80살 이상 노인, 장기요양급여 수급자, 장애인 등</li>
+                        <li>5부제 해당 요일에 대리 구매 가능</li>
+                        <li><a href="https://www.mfds.go.kr/brd/m_659/list.do?board_id=abcdmask1&srchTp=0&srchWord=%EB%8C%80%EB%A6%AC%EA%B5%AC%EB%A7%A4" target="_blank">식품의약품안전처 공적마스크 구매절차 질문&답변</a></li>
+                        <li>
+                        <li><b>대상</b> : 2002년 이후 출생한 어린이, 1940년 이전 출생한 80살 이상 노인, 장기요양급여 수급자, 입원환자(요양병원 환자 제외), 요양병원 환자, 국가보훈대상자 중 상이자, 장애인, 임신부, 등</li>
                         <li><b>구입처</b> : 약국(3월 9일부터) / 우체국, 농협, 하나로마트(3월 16일부터)</li>
                       </ul>
                     </div>
