--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                             <span class="tag_02">사망자수</span>
                             <span class="tag_03">완치자수</span>
                           </div>
-                        <canvas id="myAreaChart"></canvas>
+                        <canvas id="myAreaChart" style="display: block; padding: 25px 10px; height: 322px; width: 455px;" width="568" height="402" class="chartjs-render-monitor"></canvas>
                       </div>
                     </div>
                   </div>
@@ -667,7 +667,7 @@
                               <td>세계 6.1%,<br>대한민국2.0%</td>
                             </tr>
                             <tr>
-                              <th>기초감염재생산수(R0값)*</th>
+                              <th>기초감염재생산수<br>(R0값)*</th>
                               <td>1.1~1.7</td>
                               <td>0.4~0.9</td>
                               <td>2~5</td>
