--- a/index.html
+++ b/index.html
@@ -944,6 +944,20 @@
 
                         <a class="btn btn-primary" target="_blank" style="margin-bottom:1rem; width:100%;" href="https://gis.jeju.go.kr/crn/index.do" role="button">제주도청 제공 확진자 이동동선 및 안심존</a>
 
+                        <!-- 확진자 News 13 -->
+                        <div class="card">
+                          <div class="card-header" id="headingFour">
+                            <h2 class="mb-0 cases-title">
+                              <a target="_blank" href="https://www.jeju.go.kr/news/bodo/list.htm?act=view&seq=1239360">
+                                <button class="btn btn-link" type="button">
+                                  열세번째 확진자
+                                </button>
+                              </a>
+                            </h2>
+                          </div>
+                        </div>
+                        <!-- //확진자 News 13 -->
+
                         <!-- 확진자 News 12 -->
                         <div class="card">
                           <div class="card-header" id="headingFour">
