--- a/index.html
+++ b/index.html
@@ -948,7 +948,7 @@
                         <div class="card">
                           <div class="card-header" id="headingFour">
                             <h2 class="mb-0 cases-title">
-                              <a target="_blank" href="https://www.jeju.go.kr/news/bodo/list.htm?act=view&seq=1239360">
+                              <a target="_blank" href="https://www.jeju.go.kr/files/convert/202004/eb9df713-9733-4c2a-9a9a-4fd5dac8e14f.hwp.htm">
                                 <button class="btn btn-link" type="button">
                                   열세번째 확진자
                                 </button>
