--- a/index.html
+++ b/index.html
@@ -856,7 +856,7 @@
                     <!-- Card Header - Dropdown -->
                     <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                       <h6 class="m-0 font-weight-bold text-danger">마스크 5부제(1인당2매/1주)</h6>
-                      <div class="right"><a class="new_window" href="http://www.moef.go.kr/com/synap/synapView.do?atchFileId=ATCH_000000000013410&fileSn=1" target="_blank" alt="상세보기"><i class="fas fa-external-link-alt"></i></a></div>
+                      <div class="right">식약처 공적마스크 정보<a class="new_window" href="https://www.mfds.go.kr/bogunMaskPanMae.jsp" target="_blank" alt="상세보기"><i class="fas fa-external-link-alt"></i></a></div>
                     </div>
                     <div class="card-body">
                       <div class="table-responsive">
@@ -900,7 +900,6 @@
                           </tbody>
                         </table>
                       </div>
-                      <p> *4월 15일(수) 선거당일은 출생연도 관계없이 구매 가능(주1회,1인2매 중복구매 제한 유지)</p>
                       <h5 style="font-weight: 600;">마스크 직접 구매</h5>
                       <ul>
                         <li>운전면허증, 주민등록증, 여권 등의 신분증을 지참</li>
@@ -909,7 +908,7 @@
                       <h5 style="font-weight: 600;">마스크 대리 구매</h5>
                       <ul>
                         <li>5부제 해당 요일에 대리 구매 가능</li>
-                        <li><a href="https://www.mfds.go.kr/brd/m_659/list.do?board_id=abcdmask1&srchTp=0&srchWord=%EB%8C%80%EB%A6%AC%EA%B5%AC%EB%A7%A4" target="_blank">식품의약품안전처 공적마스크 구매절차 질문&답변</a></li>
+                        <li><a href="https://www.mfds.go.kr/docviewer/skin/doc.html?fn=20200406092131747.hwp&rs=/docviewer/result/ntc0003/43738/1/202004" target="_blank">식품의약품안전처 공적마스크 구매절차 질문&답변</a></li>
                         <li>
                         <li><b>대상</b> : 2002년 이후 출생한 어린이, 1940년 이전 출생한 80살 이상 노인, 장기요양급여 수급자, 입원환자(요양병원 환자 제외), 요양병원 환자, 국가보훈대상자 중 상이자, 장애인, 임신부, 등</li>
                         <li><b>구입처</b> : 약국(3월 9일부터) / 우체국, 농협, 하나로마트(3월 16일부터)</li>
