--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                 <div class="card-body tab-content" style="height:35rem;">
                     <canvas id="koreaDeathsPerPieChart"></canvas>
                 </div>
-                <h6 style="margin-left: 2rem;"> 질병관리본부 데이터로 일일 업데이트 됩니다. </h6>
+                <h6 style="margin-left: 2rem;">*질병관리본부 데이터로 일일 업데이트 됩니다. </h6>
               </div>
             </div>
             <!-- //한국 연령대별 확진자 분석 -->
@@ -347,7 +347,7 @@
                 <div class="card-body tab-content" style="height:35rem;">
                     <canvas id="koreaDeathsPerPieChart_two"></canvas>
                 </div>
-                <h6 style="margin-left: 2rem;"> 질병관리본부 데이터로 일일 업데이트 됩니다. </h6>
+                <h6 style="margin-left: 2rem;"> *질병관리본부 데이터로 일일 업데이트 됩니다. </h6>
               </div>
             </div>
             <!-- //한국 치명율 분석 -->
