--- a/index.html
+++ b/index.html
@@ -935,6 +935,8 @@
                     <!-- Card Header - Dropdown -->
                     <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                       <h6 class="m-0 font-weight-bold text-danger">제주형 재난긴급생활지원금 소개</h6>
+                      <div class="right">제주형 재난긴급생활지원금 정보&nbsp;<a class="new_window" href="https://blog.naver.com/happyjejudo/221916341893" target="_blank" alt="상세보기"><i class="fas fa-external-link-alt"></i></a></div>
+                    </div>
                     </div>
 
                     <div class="card-body">
