--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
                     <!-- Card Body -->
                     <div class="card-body">
                       <div class="table-responsive">
-                        <p class="text-right mb-1">※ 20년 4월 15일 기준</p>
+                        <p class="text-right mb-1">※ 20년 4월 24일 기준</p>
                         <table class="table table-bordered table-sm text-center" cellspacing="0">
                           <colgroup>
                             <col style="width:160px" />
@@ -664,7 +664,7 @@
                               <td>약 0.07%</td>
                               <td>약 35%</td>
                               <td>약 10%</td>
-                              <td>세계 6.4%,<br>대한민국2.1%</td>
+                              <td>세계 7.1%,<br>대한민국2.2%</td>
                             </tr>
                             <tr>
                               <th>기초감염재생산수<br>(R0값)*</th>
@@ -678,7 +678,7 @@
                               <td>집계되지 않음(18,449)</td>
                               <td>2,482(854)</td>
                               <td>8,096(774)</td>
-                              <td><br>2,049,850(132,835)</td>
+                              <td><br>2,711,414(192,126)</td>
                             </tr>
                           </tbody>
                         </table>
@@ -855,7 +855,7 @@
                   <div class="card shadow mb-4">
                     <!-- Card Header - Dropdown -->
                     <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                      <h6 class="m-0 font-weight-bold text-danger">마스크 5부제(1인당2매/1주)</h6>
+                      <h6 class="m-0 font-weight-bold text-danger">마스크 5부제(1인당3매/1주)(4/27~)</h6>
                       <div class="right">식약처 공적마스크 정보&nbsp;<a class="new_window" href="https://www.mfds.go.kr/bogunMaskPanMae.jsp" target="_blank" alt="상세보기"><i class="fas fa-external-link-alt"></i></a></div>
                     </div>
                     <div class="card-body">
@@ -900,6 +900,7 @@
                           </tbody>
                         </table>
                       </div>
+                      <p>*석가탄신일(4/30), 어린이날(5/5)등 법정공휴일은 주말과 동일</p>
                       <h5 style="font-weight: 600;">마스크 직접 구매</h5>
                       <ul>
                         <li>운전면허증, 주민등록증, 여권 등의 신분증을 지참</li>
@@ -908,9 +909,9 @@
                       <h5 style="font-weight: 600;">마스크 대리 구매</h5>
                       <ul>
                         <li>5부제 해당 요일에 대리 구매 가능</li>
-                        <li><a href="https://www.mfds.go.kr/docviewer/skin/doc.html?fn=20200406092131747.hwp&rs=/docviewer/result/ntc0003/43738/1/202004" target="_blank">식품의약품안전처 공적마스크 구매절차 질문&답변</a></li>
+                        <li><a href="https://www.mfds.go.kr/docviewer/skin/doc.html?fn=20200420091345000.pdf&rs=/docviewer/result/ntc0003/43738/1/202004" target="_blank">식품의약품안전처 공적마스크 구매절차 질문&답변(4/20변경)</a></li>
                         <li>
-                        <li><b>대상</b> : 2002년 이후 출생한 어린이, 1940년 이전 출생한 80살 이상 노인, 장기요양급여 수급자, 입원환자(요양병원 환자 제외), 요양병원 환자, 국가보훈대상자 중 상이자, 장애인, 임신부, 등</li>
+                        <li><b>대상</b> : 2002년 이후 출생한 어린이, 1940년 이전 출생한 80살 이상 노인, 장기요양급여 수급자, 입원환자(요양병원 환자 제외), 요양병원 입원환자, 국가보훈대상자 중 상이자, 장애인, 임신부, 등</li>
                         <li><b>구입처</b> : 약국(3월 9일부터) / 우체국, 농협, 하나로마트(3월 16일부터)</li>
                       </ul>
                     </div>
@@ -929,7 +930,7 @@
             <div class="col-xl-12 col-lg-12">
               <div class="row">
                 <!-- 제주 최신 정보(최근 중국인 이동 경로) -->
-                <div class="col-xl-12 col-lg-12">                  
+                <div class="col-xl-12 col-lg-12">
                   <div class="card shadow mb-4">
                     <!-- Card Header - Dropdown -->
                     <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
@@ -971,7 +972,7 @@
             </div>
           </div>
           <!-- //제주형 재난긴급생활지원금 끝 -->
-          
+
           <!-- 제주도 현황 -->
           <div class="row">
             <div class="col-xl-6 col-lg-12">
