--- a/index.html
+++ b/index.html
@@ -1610,6 +1610,10 @@
                 <a href="http://www.jejuilbo.net/news/articleView.html?idxno=140662" target="_blank"><span class="tag color2">무료앱</span><img src="./img/logo_cie.png" alt=""></a>
                 <h6>캐치잇 잉글리시</h6>
               </div>
+              <div class="col-6">
+                <a href="https://foldingathome.org/" target="_blank"><span class="tag color2">기부</span><img src="./img/covid_19.jpg" alt=""></a>
+                <h6>시스템 자원 기부 : 연구분석</h6>
+              </div>
             </div>
           </div>
           <div class="modal-footer">
