--- a/index.html
+++ b/index.html
@@ -1612,7 +1612,7 @@
               </div>
               <div class="col-6">
                 <a href="https://foldingathome.org/" target="_blank"><span class="tag color2">기부</span><img src="./img/covid_19.jpg" alt=""></a>
-                <h6>시스템 자원 기부 : 연구분석</h6>
+                <h6>시스템자원(GPU/CPU) 기부 :<br>Folding@Home - Live Corona Korea<br> Team# : 263595</h6>
               </div>
             </div>
           </div>
