--- a/index.html
+++ b/index.html
@@ -1611,7 +1611,7 @@
                 <h6>캐치잇 잉글리시</h6>
               </div>
               <div class="col-6">
-                <a href="https://foldingathome.org/" target="_blank"><span class="tag color2">기부</span><img src="./img/covid_19.jpg" alt=""></a>
+                <a href="https://foldingathome.org/" target="_blank"><span class="tag color2">기부</span><img src="./img/FAH_protein+explanation_image.png" alt="protein folding+F@H explanation image"></a>
                 <h6>시스템자원(GPU/CPU) 기부 :<br>Folding@Home-Live Corona Korea<br><a href ="https://news.chosun.com/site/data/html_dir/2020/04/21/2020042104554.html?utm_source=naver&utm_medium=original&utm_campaign=news">설명&관련기사</a><br> Team# : 263595</h6>
               </div>
             </div>
