--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
       <!-- Button trigger modal -->
       <div class="together_wrap">
         <button type="button" class="btn btn_together" data-toggle="modal" data-target="#togetherModal">
-          <img src="./img/donation.svg" alt="마음을 모아요"><br>
+          <img src="./img/donation.svg" alt="마음을 모아요, 기부 링크"><br>
         </button>
-        <p>마음을 모아요!</p>
+        <p>마음을 모아요!<br>(성금모금/연구지원)</p>
       </div>
     </ul>
     <!-- Content Wrapper -->
