--- a/index.html
+++ b/index.html
@@ -1017,7 +1017,7 @@
                   <div class="card shadow mb-4">
                     <!-- Card Header - Dropdown -->
                     <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                      <h6 class="m-0 font-weight-bold text-danger">중국관광객 제주 입도 현황(2월 4일 무사증 중단)</h6>
+                      <h6 class="m-0 font-weight-bold text-danger">중국관광객 제주 입도 현황(2월 4일 무사증 중단) - 업데이트 중단 차트</h6>
                       <div class="right"><a class="new_window" href="http://www.cdc.go.kr/contents.es?mid=a21111060000" target="_blank" alt="상세보기"><i class="fas fa-external-link-alt"></i></a></div>
                     </div>
                     <!-- Card Body -->
@@ -1035,7 +1035,7 @@
                   <div class="card shadow mb-4 jeju_in">
                     <!-- Card Header - Dropdown -->
                     <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                      <h6 class="m-0 font-weight-bold text-danger">일일 입도현황(제주도청 제공, 무사증 중단 후)</h6>
+                      <h6 class="m-0 font-weight-bold text-danger">일일 입도현황(제주도청 제공, 무사증 중단 후) - 업데이트 중단 차트</h6>
                     </div>
                     <!-- Card Body -->
                     <div class="card-body">
