--- a/index.html
+++ b/index.html
@@ -855,7 +855,7 @@
                   <div class="card shadow mb-4">
                     <!-- Card Header - Dropdown -->
                     <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                      <h6 class="m-0 font-weight-bold text-danger">마스크 5부제(1인당3매/1주)(4/27~)</h6>
+                      <h6 class="m-0 font-weight-bold text-danger">마스크 5부제(1인당3매/1주)</h6>
                       <div class="right">식약처 공적마스크 정보&nbsp;<a class="new_window" href="https://www.mfds.go.kr/bogunMaskPanMae.jsp" target="_blank" alt="상세보기"><i class="fas fa-external-link-alt"></i></a></div>
                     </div>
                     <div class="card-body">
@@ -992,7 +992,7 @@
                         <a class="btn btn-primary" target="_blank" style="margin-bottom:1rem; width:100%;" href="https://gis.jeju.go.kr/crn/index.do" role="button">제주도청 제공 확진자 이동동선 및 안심존</a>
 
                         <!-- 확진자 News 13 -->
-                        <div class="card">
+                        <!-- <div class="card">
                           <div class="card-header" id="headingFour">
                             <h2 class="mb-0 cases-title">
                               <a target="_blank" href="https://www.jeju.go.kr/files/convert/202004/eb9df713-9733-4c2a-9a9a-4fd5dac8e14f.hwp.htm">
@@ -1002,7 +1002,7 @@
                               </a>
                             </h2>
                           </div>
-                        </div>
+                        </div> -->
                         <!-- //확진자 News 13 -->
 
                       </div>
