--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                     <div class="card-body">
                       <div class="chart-area" style="height:23rem;">
                           <div class="korea_chart_tags">
-                            <span class="tag_01">누적 격리자수</span>
+                            <span class="tag_01">확진자수</span>
                             <span class="tag_02">사망자수</span>
                             <span class="tag_03">완치자수</span>
                           </div>
@@ -620,7 +620,7 @@
                     <!-- Card Body -->
                     <div class="card-body">
                       <div class="table-responsive">
-                        <p class="text-right mb-1">※ 20년 4월 24일 기준</p>
+                        <p class="text-right mb-1">※ 20년 5월 1일 기준</p>
                         <table class="table table-bordered table-sm text-center" cellspacing="0">
                           <colgroup>
                             <col style="width:160px" />
@@ -664,7 +664,7 @@
                               <td>약 0.07%</td>
                               <td>약 35%</td>
                               <td>약 10%</td>
-                              <td>세계 7.1%,<br>대한민국2.2%</td>
+                              <td>세계 7.1%,<br>대한민국2.3%</td>
                             </tr>
                             <tr>
                               <th>기초감염재생산수<br>(R0값)*</th>
