Revert "Update index.html"
This reverts commit ec78c1e7017bfee51c6ed4e4bb34220cc0c22d7c.

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                   </ul>
                   <div class="tab-pane fade in show active" id="korea_line_chart" role="tabpanel" style="height:35rem;">
                     <div class="korea_chart_tags">
-                      <span class="tag_01">한국 확진자수</span>
+                      <span class="tag_01">한국</span>
                       <span class="tag_02">전일대비</span>
                       <span class="tag_03">사망자</span>
                       <span class="tag_04">완치자</span>
@@ -620,7 +620,7 @@
                     <!-- Card Body -->
                     <div class="card-body">
                       <div class="table-responsive">
-                        <p class="text-right mb-1">※ 20년 <span id="치명률_날짜"></span> 기준</p>
+                        <p class="text-right mb-1">※ 20년 5월 1일 기준</p>
                         <table class="table table-bordered table-sm text-center" cellspacing="0">
                           <colgroup>
                             <col style="width:160px" />
@@ -664,7 +664,7 @@
                               <td>약 0.07%</td>
                               <td>약 35%</td>
                               <td>약 10%</td>
-                              <td>세계<span id="세계치명률">,</span><br>한국<span id="치명률"></span></td>
+                              <td>세계 7.1%,<br>대한민국2.3%</td>
                             </tr>
                             <tr>
                               <th>기초감염재생산수<br>(R0값)*</th>
