제주도 마스크,손세정제 redirect 일시 비활성화ㅣ

--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
           <span>마스크 재고 맵</span>
         </a>
       </li>
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link" href="#jejuMedicine">
           <span>제주도 마스크, 손세정제 구입처</span>
         </a>
-      </li>
+      </li> -->
       <!-- Divider -->
       <hr class="sidebar-divider">
 
