--- a/index.html
+++ b/index.html
@@ -983,32 +983,32 @@
                   <!-- Card Header - Dropdown -->
                   <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                     <h6 class="m-0 font-weight-bold text-danger">긴급 재난 지원금 안내</h6>
-                    <div class="right">상세정보&nbsp;<a class="new_window" href="gov.kr/portal/coronaPolicy/list/emergCalamSportAmt/sub01" target="_blank" alt="상세보기"><i class="fas fa-external-link-alt"></i></a></div>
+                    <div class="right">상세정보&nbsp;<a class="new_window" href="https://www.gov.kr/portal/coronaPolicy/list/emergCalamSportAmt/sub01" target="_blank" alt="상세보기"><i class="fas fa-external-link-alt"></i></a></div>
                   </div>
 
                   <div class="card-body">
                     <div class="accordion" id="accordionExample">
                       <div class="row">
                         <div class="col-md-4">
-                          <img src="img/긴급재난지원금_안내자료/긴급재난금_신청,지급방안_인포그래픽.png" class="img-fluid" alt="">
+                          <img src="img/긴급재난금_안내자료/긴급재난금_신청,지급방안_인포그래픽.png" class="img-fluid" alt="">
                         </div>
                         <div class="col-md-4">
-                          <img src="img/긴급재난지원금_안내자료/긴급재난금_신청,지급방안_카드뉴스1.png" class="img-fluid" alt="">
+                          <img src="img/긴급재난금_안내자료/긴급재난금_신청,지급방안_카드뉴스1.png" class="img-fluid" alt="">
                         </div>
                         <div class="col-md-4">
-                          <img src="img/긴급재난지원금_안내자료/긴급재난금_신청,지급방안_카드뉴스2.png" class="img-fluid" alt="">
+                          <img src="img/긴급재난금_안내자료/긴급재난금_신청,지급방안_카드뉴스2.png" class="img-fluid" alt="">
                         </div>
                         <div class="col-md-4">
-                          <img src="img/긴급재난지원금_안내자료/긴급재난금_신청,지급방안_카드뉴스3.png" class="img-fluid" alt="">
+                          <img src="img/긴급재난금_안내자료/긴급재난금_신청,지급방안_카드뉴스3.png" class="img-fluid" alt="">
                         </div>
                         <div class="col-md-4">
-                          <img src="img/긴급재난지원금_안내자료/긴급재난금_신청,지급방안_카드뉴스4.png" class="img-fluid" alt="">
+                          <img src="img/긴급재난금_안내자료/긴급재난금_신청,지급방안_카드뉴스4.png" class="img-fluid" alt="">
                         </div>
                         <div class="col-md-4">
-                          <img src="img/긴급재난지원금_안내자료/긴급재난금_신청,지급방안_카드뉴스5.png" class="img-fluid" alt="">
+                          <img src="img/긴급재난금_안내자료/긴급재난금_신청,지급방안_카드뉴스5.png" class="img-fluid" alt="">
                         </div>
                         <div class="col-md-4">
-                          <img src="img/긴급재난지원금_안내자료/긴급재난금_신청,지급방안_카드뉴스6.png" class="img-fluid" alt="">
+                          <img src="img/긴급재난금_안내자료/긴급재난금_신청,지급방안_카드뉴스6.png" class="img-fluid" alt="">
                         </div>
                          <div class="col-md-4">
                           <img src="img/긴급재난지원금_안내자료/긴급재난지원금_사용방법_및_기한.png" class="img-fluid" alt="">
