Revert "Update index.html"

--- a/index.html
+++ b/index.html
@@ -990,22 +990,22 @@
                     <div class="accordion" id="accordionExample">
                       <div class="row">
                         <div class="col-md-4">
-                          <img src="img/긴급재난금_안내자료/긴급재난금_신청,지급방안_인포그래픽.png" class="img-fluid" alt="">
+                          <img src="img/긴급재난지원금_안내자료/긴급재난금_신청,지급방안_인포그래픽.png" class="img-fluid" alt="">
                         </div>
                         <div class="col-md-4">
-                          <img src="img/긴급재난금_안내자료/긴급재난금_신청,지급방안_카드뉴스1.png" class="img-fluid" alt="">
+                          <img src="img/긴급재난지원금_안내자료/긴급재난금_신청,지급방안_카드뉴스1.png" class="img-fluid" alt="">
                         </div>
                         <div class="col-md-4">
-                          <img src="img/긴급재난금_안내자료/긴급재난금_신청,지급방안_카드뉴스2.png" class="img-fluid" alt="">
+                          <img src="img/긴급재난지원금_안내자료/긴급재난금_신청,지급방안_카드뉴스2.png" class="img-fluid" alt="">
                         </div>
                         <div class="col-md-4">
-                          <img src="img/긴급재난금_안내자료/긴급재난금_신청,지급방안_카드뉴스3.png" class="img-fluid" alt="">
+                          <img src="img/긴급재난지원금_안내자료/긴급재난금_신청,지급방안_카드뉴스3.png" class="img-fluid" alt="">
                         </div>
                         <div class="col-md-4">
-                          <img src="img/긴급재난금_안내자료/긴급재난금_신청,지급방안_카드뉴스4.png" class="img-fluid" alt="">
+                          <img src="img/긴급재난지원금_안내자료/긴급재난금_신청,지급방안_카드뉴스4.png" class="img-fluid" alt="">
                         </div>
                         <div class="col-md-4">
-                          <img src="img/긴급재난금_안내자료/긴급재난금_신청,지급방안_카드뉴스5.png" class="img-fluid" alt="">
+                          <img src="img/긴급재난지원금_안내자료/긴급재난금_신청,지급방안_카드뉴스5.png" class="img-fluid" alt="">
                         </div>
                         <div class="col-md-4">
                           <img src="img/긴급재난금_안내자료/긴급재난금_신청,지급방안_카드뉴스6.png" class="img-fluid" alt="">
