긴급재난지원금 일시 비활성화

--- a/index.html
+++ b/index.html
@@ -1008,11 +1008,14 @@
                           <img src="img/긴급재난지원금_안내자료/긴급재난금_신청,지급방안_카드뉴스5.png" class="img-fluid" alt="">
                         </div>
                         <div class="col-md-4">
-                          <img src="img/긴급재난금_안내자료/긴급재난금_신청,지급방안_카드뉴스6.png" class="img-fluid" alt="">
+                          <img src="img/긴급재난지원금_안내자료/긴급재난금_신청,지급방안_카드뉴스6.png" class="img-fluid" alt="">
                         </div>
                          <div class="col-md-4">
                           <img src="img/긴급재난지원금_안내자료/긴급재난지원금_사용방법_및_기한.png" class="img-fluid" alt="">
                         </div>
+                        <div class="col-md-4">
+                         <img src="img/긴급재난지원금_안내자료/긴급재난지원금_지급수단별_특징.jpg" class="img-fluid" alt="">
+                       </div>
                       </div>
                     </div>
                   </div>
