--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#jejuCasesStatus">
-          <span>제주형 재난긴금생활지원금 안내</span>
+          <span>제주 재난긴금생활지원금 안내</span>
         </a>
       </li>
 
@@ -974,14 +974,14 @@
           <!-- //제주형 재난긴급생활지원금 끝 -->
 
           <!-- 긴급 재난지원금 안내 -->
-        <div class="row">
+        <!-- <div class="row">
           <div class="col-xl-12 col-lg-12">
             <div class="row">
 
               <div class="col-xl-12 col-lg-12">
                 <div class="card shadow mb-4">
-                  <!-- Card Header - Dropdown -->
-                  <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                  <!-- Card Header - Dropdown --> -->
+                  <!-- <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                     <h6 class="m-0 font-weight-bold text-danger">긴급 재난 지원금 안내</h6>
                     <div class="right">상세정보&nbsp;<a class="new_window" href="https://www.gov.kr/portal/coronaPolicy/list/emergCalamSportAmt/sub01" target="_blank" alt="상세보기"><i class="fas fa-external-link-alt"></i></a></div>
                   </div>
@@ -1023,7 +1023,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
         <!-- //긴급 재난지원금 안내 끝 -->
 
           <!-- 제주도 현황 -->
