--- a/index.html
+++ b/index.html
@@ -915,7 +915,6 @@
                       <ul>
                         <li>5부제 해당 요일에 대리 구매 가능</li>
                         <li><a href="https://www.mfds.go.kr/docviewer/skin/doc.html?fn=20200420091345000.pdf&rs=/docviewer/result/ntc0003/43738/1/202004" target="_blank">식품의약품안전처 공적마스크 구매절차 질문&답변(4/20변경)</a></li>
-                        <li>
                         <li><b>대상</b> : 2002년 이후 출생한 어린이, 1940년 이전 출생한 80살 이상 노인, 장기요양급여 수급자, 입원환자(요양병원 환자 제외), 요양병원 입원환자, 국가보훈대상자 중 상이자, 장애인, 임신부, 등</li>
                         <li><b>구입처</b> : 약국(3월 9일부터) / 우체국, 농협, 하나로마트(3월 16일부터)</li>
                       </ul>
@@ -1025,6 +1024,14 @@
                          <img src="img/긴급재난지원금_안내자료/긴급재난지원금_지급수단별_특징.jpg" class="img-fluid" alt="">
                        </div>
                       </div>
+                      <p> 행정안전부 긴급재난 지원금 안내 링크</p>
+                      <ul>
+                        <li><a href="https://www.gov.kr/portal/coronaPolicy/list/emergCalamSportAmt/sub02" target="_blank">신청방법</a></li>
+                        <li><a href="https://www.gov.kr/portal/coronaPolicy/list/emergCalamSportAmt/sub03" target="_blank">지급 수단 안내</a></li>
+                        <li><a href="https://www.gov.kr/portal/coronaPolicy/list/emergCalamSportAmt/sub04" target="_blank">발표자료</a></li>
+                        <li><a href="https://www.gov.kr/portal/coronaPolicy/list/emergCalamSportAmt/sub05" target="_blank">보도/홍보 자료</a></li>
+                        <li><a href="https://www.gov.kr/portal/coronaPolicy/list/emergCalamSportAmt/sub06" target="_blank">FAQ</a></li>
+                     </ul>
                     </div>
                   </div>
                 </div>
