--- a/index.html
+++ b/index.html
@@ -1024,7 +1024,8 @@
                          <img src="img/긴급재난지원금_안내자료/긴급재난지원금_지급수단별_특징.jpg" class="img-fluid" alt="">
                        </div>
                       </div>
-                      <p> 행정안전부 긴급재난 지원금 안내 링크</p>
+                      <br>
+                      <p><행정안전부 긴급재난 지원금 안내 링크></p>
                       <ul>
                         <li><a href="https://www.gov.kr/portal/coronaPolicy/list/emergCalamSportAmt/sub02" target="_blank">신청방법</a></li>
                         <li><a href="https://www.gov.kr/portal/coronaPolicy/list/emergCalamSportAmt/sub03" target="_blank">지급 수단 안내</a></li>
