--- a/index.html
+++ b/index.html
@@ -1074,6 +1074,21 @@
                         </div> -->
                         <!-- //확진자 News 13 -->
 
+                        <!-- 확진자 News 14 --> 
+                        <div class="card">
+                          <div class="card-header" id="headingFour">
+                            <h2 class="mb-0 cases-title">
+                              <a target="_blank" href="https://www.jeju.go.kr/news/bodo/list.htm?act=view&seq=1242166">
+                                <button class="btn btn-link" type="button">
+                                  열네번째 확진자
+                                </button>
+                              </a>
+                            </h2>
+                          </div>
+                        </div>
+                        <!-- //확진자 News 14 -->
+
+
                       </div>
 
                     </div>
